Resolved alignment

--- a/src/app/app-grid/app-grid.component.scss
+++ b/src/app/app-grid/app-grid.component.scss
@@ -1,11 +1,9 @@
 .app-container {
+    position: relative;
     display: flex;
     flex-direction: column;
-    left: 10%;
-    right: 10%;
     gap: 20px;
     max-width: 400px;
-    // background-color: black;
 
     .large-apps {
         display: grid;
